# Pompon

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: documentation.yml  unittest-uv.yml  version-update.yml
docs/: Makefile  _quarto.yml  about.qmd  index.qmd  install.qmd  objects.json
docs/notebook/: 2dpes.ipynb  _h2co_opt.py  create-random-mpo.ipynb  custom-network-h2co.ipynb  custom-network.ipynb  h2co_2dcut.ipynb  h2co_opt.ipynb  index.qmd  itensor_vDMRG.ipynb  nnmpo-ham.h5  nnmpo_to_itensor_mpo.ipynb  tensor_train.ipynb
docs/reference/: dataloader.DataLoader.qmd  index.qmd  layers.activations.qmd  layers.basis.Basis.qmd  layers.basis.Phi.qmd  layers.coordinator.Coordinator.qmd  layers.coordinator.Stiefel.qmd  layers.linear.Linear.qmd  layers.parameters.Parameter.qmd  layers.parameters.qmd  layers.qmd  layers.tensor.BasisBatch.qmd  layers.tensor.Core.qmd  layers.tensor.LeftBlockBatch.qmd  layers.tensor.RightBlockBatch.qmd  layers.tensor.Tensor.qmd  layers.tensor.TwodotCore.qmd  layers.tensor.qmd  layers.tt.TensorTrain.qmd  losses.qmd  model.Model.qmd  (+13 more)
pompon/: __dtype__.py  __index__.py  __init__.py  _jittables.py  dataloader.py  losses.py  model.py  sop.py  utils.py
tests/: mpo-empty.h5  test_anadiff_onedot.py  test_anadiff_twodot.py  test_cg.py  test_convert_mpo.py  test_export_itensor.py  test_force.py  test_hdf5.py  test_import.py  test_nnmpo_forward.py  test_nnmpo_grad_1d.py  test_nnmpo_sweep.py  test_sop.py  test_stiefel.py  test_tensor_core.py  test_tensor_train.py
(+29 files in other folders)
